--- a/src/app/probability-calculator/probability-calculator.component.html
+++ b/src/app/probability-calculator/probability-calculator.component.html
@@ -2,7 +2,9 @@
     <h2>Probability Calculator</h2>
     <div class="cards">
         <div class="card" *ngFor="let card of cards">
-            <button (click)="increase(card.number)" class="bg-primary card" mat-raised-button><div style="position: absolute; background-color: red; height: 100%; top: 0; left: 0; opacity: 0.3;" [style.width]="card.percentage * 100 +'%'"></div>{{(card.number).toString()}}: {{card.amount}}/{{card.max}} {{card.percentage | percentagePipe}}</button>
+            <button class="decrease" (click)="decrease(card.number)" mat-mini-fab color="warn"><mat-icon>backspace</mat-icon></button><button (click)="increase(card.number)" class="bg-primary card" mat-raised-button><div style="position: absolute; background-color: red; height: 100%; top: 0; left: 0; opacity: 0.3;" [style.width]="card.percentage * 100 +'%'"></div>{{(card.number).toString()}}: {{card.amount}}/{{card.max}} {{card.percentage | percentagePipe}}</button>
         </div>
     </div>
+    <br>
+    <button (click)="initialize()" mat-raised-button color="warn">Next game</button>
 </div>
