--- a/src/app/probability-calculator/probability-calculator.component.scss
+++ b/src/app/probability-calculator/probability-calculator.component.scss
@@ -25,3 +25,7 @@ $accent: mat-palette($mat-amber, A400, A300, A600);
     flex-wrap: wrap;
     justify-content: space-around;
 }
+
+mat-icon {
+    margin-right: 3px; 
+}
