--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,3 @@
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; text-align: center;}
+body { margin: 20px; font-family: Roboto, "Helvetica Neue", sans-serif; text-align: center;}
