Added Skyjo instructions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <h1>Skyjo Tracker</h1>
+<a href="https://www.learnnewgames.com/skyjo/">Skyjo Instructions</a>
 <app-probability-calculator></app-probability-calculator>
